{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 18,
  "lineage": "e7722a68-dec9-ceda-9d6e-14c3539ea677",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "shahal-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/networkInterfaces/shahal-nicx",
            "internal_domain_name_suffix": "tnbuktz4sazunawbyvxkswqp3b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.125.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/publicIPAddresses/shahal-ipx",
                "subnet_id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/virtualNetworks/shahal-networkx/subnets/shahal-subnet"
              }
            ],
            "location": "westeurope",
            "name": "shahal-nicx",
            "private_ip_address": "10.125.1.4",
            "private_ip_addresses": [
              "10.125.1.4"
            ],
            "resource_group_name": "shahal-TerraformX",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.shahal-ip",
            "azurerm_resource_group.shahal-x",
            "azurerm_subnet.shahal-net",
            "azurerm_virtual_network.shahal-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "s-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/networkSecurityGroups/shahal-Sgroup",
            "location": "westeurope",
            "name": "shahal-Sgroup",
            "resource_group_name": "shahal-TerraformX",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.shahal-x"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/networkSecurityGroups/shahal-Sgroup/securityRules/allow_http",
            "name": "allow_http",
            "network_security_group_name": "shahal-Sgroup",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "shahal-TerraformX",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.s-group",
            "azurerm_resource_group.shahal-x"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/networkSecurityGroups/shahal-Sgroup/securityRules/allow_ssh",
            "name": "allow_ssh",
            "network_security_group_name": "shahal-Sgroup",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "shahal-TerraformX",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.s-group",
            "azurerm_resource_group.shahal-x"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "shahal-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/publicIPAddresses/shahal-ipx",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "shahal-ipx",
            "resource_group_name": "shahal-TerraformX",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.shahal-x"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "shahal-net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.125.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/virtualNetworks/shahal-networkx/subnets/shahal-subnet",
            "name": "shahal-subnet",
            "resource_group_name": "shahal-TerraformX",
            "virtual_network_name": "shahal-networkx"
          },
          "dependencies": [
            "azurerm_resource_group.shahal-x",
            "azurerm_virtual_network.shahal-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "shahal-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/virtualNetworks/shahal-networkx/subnets/shahal-subnet",
            "network_security_group_id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/networkSecurityGroups/shahal-Sgroup",
            "subnet_id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/virtualNetworks/shahal-networkx/subnets/shahal-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.s-group",
            "azurerm_resource_group.shahal-x",
            "azurerm_subnet.shahal-net",
            "azurerm_virtual_network.shahal-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "shahal-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.125.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4f45439b-903e-4633-82c1-c56ea95a0fe9",
            "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/virtualNetworks/shahal-networkx",
            "location": "westeurope",
            "name": "shahal-networkx",
            "resource_group_name": "shahal-TerraformX",
            "subnet": [
              {
                "address_prefix": "10.125.1.0/24",
                "id": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/virtualNetworks/shahal-networkx/subnets/shahal-subnet",
                "name": "shahal-subnet",
                "security_group": "/subscriptions/c034e2c8-453a-4304-bfb2-48e3681f7709/resourceGroups/shahal-TerraformX/providers/Microsoft.Network/networkSecurityGroups/shahal-Sgroup"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.shahal-x"
          ]
        }
      ]
    }
  ]
}